# ThetaDataDx

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  TODO.md  auth_rc5.rs  cliff.toml  compare.py  config.default.properties  config.default.toml  deny.toml  endpoint_test_results.md  justfile  parity.toml
crates/json_canon/: Cargo.toml
crates/tdbe/: Cargo.toml  README.md  build.rs
crates/thetadatadx/: Cargo.toml  README.md  build.rs  config.default.toml  config_surface.toml  endpoint_schema.toml  endpoint_surface.toml  fpss_event_schema.toml  sdk_surface.toml  tick_schema.toml
ffi/: Cargo.toml  README.md
ffi/src/: auth.rs  config_accessors.rs  endpoint_request_options.rs  endpoint_stream.rs  endpoint_with_options.rs  endpoints.rs  error.rs  fallback.rs  flatfiles.rs  fpss_event_converter.rs  fpss_event_structs.rs  generated_endpoint_with_options.rs  historical.rs  lib.rs  panic.rs  streaming.rs  streaming_batches.rs  streaming_batches_ipc.rs  types.rs  utility.rs
ffi/tests/: config_env_setter_preserves_on_panic.rs  panic_boundary.rs  panic_isolation.rs  streaming_config_forwarding.rs  wait_strategy.rs  worker_threads.rs
sdks/cpp/: CMakeLists.txt  README.md
sdks/python/: .gitignore  Cargo.toml  README.md  pyproject.toml  stubtest_allowlist.txt
sdks/typescript/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  streaming-session.d.ts  streaming-session.js  tsconfig.json
thetadatadx-cpp/: CMakeLists.txt  README.md
thetadatadx-cpp/examples/: historical_stream_smoke.cpp  main.cpp  market_data_stream_smoke.cpp  streaming_smoke.cpp  validate.cpp
thetadatadx-cpp/include/: abi_struct_layout_asserts.hpp.inc  config_accessors.hpp.inc  endpoint_options.hpp.inc  endpoint_request_options.h.inc  endpoint_with_options.h.inc  fpss_event_structs.h.inc  fpss_layout_asserts.hpp.inc  historical.hpp.inc  historical_stream.h.inc  historical_stream.hpp.inc  market_data.hpp.inc  market_data_stream.h.inc  thetadatadx.h  thetadatadx.hpp  tick_arrow_ipc.hpp.inc  tick_layout_asserts.hpp.inc
thetadatadx-cpp/src/: historical.cpp.inc  historical_stream.cpp.inc  lifecycle.cpp.inc  market_data_stream.cpp.inc  thetadatadx.cpp  utilities.cpp.inc
thetadatadx-cpp/tests/: CMakeLists.txt  arrow_ipc.cpp  config_pool_sizing.cpp  config_reconnect.cpp  doctest_examples.cpp  error_taxonomy.cpp  flatfiles_config.cpp  fluent_rendering.cpp  fpss.cpp  history.cpp  history_async.cpp  interest_rate.cpp  lifecycle.cpp  thetadatadx_client.cpp
thetadatadx-ffi/: Cargo.toml  README.md
thetadatadx-ffi/src/: auth.rs  config_accessors.rs  endpoint_request_options.rs  endpoint_stream.rs  endpoint_with_options.rs  endpoints.rs  error.rs  flatfiles.rs  fpss_event_converter.rs  fpss_event_structs.rs  lib.rs  panic.rs  streaming.rs  streaming_batches.rs  streaming_batches_ipc.rs  types.rs  utility.rs
thetadatadx-ffi/tests/: arrow_ipc_projected.rs  config_env_setter_preserves_on_panic.rs  consumer_cpu.rs  panic_boundary.rs  panic_isolation.rs  streaming_config_forwarding.rs  worker_threads.rs
thetadatadx-py/: Cargo.toml  README.md  pyproject.toml  stubtest_allowlist.txt
thetadatadx-py/benches/: bench_parallel_throughput.py  streaming_throughput_levers_py.py  streaming_throughput_py.py
thetadatadx-py/examples/: chain_quote_bench.py  fluent_streaming_quote.py  historical.py  market_data.py
thetadatadx-py/src/: async_runtime.rs  bench_streaming.rs  chunking.rs  coerce.rs  errors.rs  flatfile_methods.rs  fluent.rs  fpss_client.rs  lib.rs  mdds_client.rs  streaming_batches.rs  streaming_session.rs
thetadatadx-py/tests/: test_api_key_credentials.py  test_column_projection.py  test_config_consumer_cpu.py  test_config_environment.py  test_config_flush_mode.py  test_config_from_dotenv.py  test_config_pool_sizing.py  test_config_reconnect.py  test_config_resilience.py  test_config_wait_mode.py  test_config_wait_strategy.py  test_context_manager.py  test_dataframe_arrow.py  test_docstring_examples.py  test_dropped_events.py  test_error_parity.py  test_flatfiles_config.py  test_fluent_contract_example.py  test_fpss_control_variants.py  test_fresh_install_smoke.py  test_inline_client_construction.py  test_interest_rate.py  test_module_exports.py  test_multi_symbol_slice.py  test_no_gil.py  test_no_pyclass_name_collisions.py  test_panic_isolation.py  test_ring_occupancy.py  test_slow_callback.py  test_standalone_clients.py  test_streaming_batches.py  test_typed_surface.py  test_util_helpers.py  test_worker_threads.py
thetadatadx-rs/: Cargo.toml  README.md  build.rs  config.default.toml  config_surface.toml  endpoint_surface.toml  fpss_event_schema.toml  sdk_surface.toml  tick_schema.toml
thetadatadx-rs/benches/: README.md  bench_decode_allocations.rs  bench_delta_decode.rs  bench_enums.rs  bench_fpss_event.rs  bench_greeks.rs  bench_protobuf_decode.rs  bench_tick.rs  grpc_transport_comparison.rs  market_data_streaming_memory.rs  streaming_channels.rs  streaming_throughput.rs
thetadatadx-rs/build_support/: conditions.rs  mod.rs
thetadatadx-rs/build_support_bin/: mod.rs  upstream_openapi.rs
thetadatadx-rs/data/: quote_conditions.toml  trade_conditions.toml
thetadatadx-rs/examples/: build_eod_greeks_fixtures.rs  build_trade_greeks_fixtures.rs  chain_quote_bench.rs
thetadatadx-rs/proto/: MAINTENANCE.md  beta_endpoints.snapshot.rs  mdds.proto
thetadatadx-rs/src/: backoff.rs  client.rs  client_builder.rs  columns.rs  error.rs  lib.rs  lifecycle.rs  observability.rs
thetadatadx-rs/tests/: config_from_file_ambient_env.rs  decode_fuzz_property.rs  dispatcher_panic_isolation.rs  flatfiles_byte_match.rs  flatfiles_synthetic_golden.rs  grpc_mock_server.rs  midframe_disconnect.rs  reconnect_storm.rs  regen_byte_identical.sh  replay_capture.rs  sharded_fanout.rs  test_column_projection.rs  test_decode_captures.rs  test_endpoint_routing.rs  test_eod_greeks_schema.rs  test_frames_arrow.rs  test_frames_polars.rs  test_interest_rate_schema.rs  test_pool_reconnect.rs  (+1 more)
(+1648 files in other folders)
