[package]
name = "thetadatadx-ffi"
version = "7.3.1"
edition = "2021"
description = "C FFI layer for thetadatadx — used by Go and C++ SDKs"
license = "GPL-3.0-or-later"
# Internal FFI shim — never published to crates.io. Only `tdbe` and
# `thetadatadx` are published (see publish-crate job in ci.yml).
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
thetadatadx = { path = "../crates/thetadatadx" }
tdbe = { version = "0.10.0", path = "../crates/tdbe" }
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
# Used by the FPSS streaming callback silent-drop observability path
# (see `tdx_fpss_dropped_events` / `tdx_unified_dropped_events`). Keep
# pinned to the same major/minor as the parent crate so the target that
# `tracing::debug!` writes to is filterable with a single
# `RUST_LOG=thetadatadx=debug` directive.
tracing = "0.1.44"
