[package]
name = "thetadatadx-ffi"
version = "11.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "C FFI layer for thetadatadx — used by Go and C++ SDKs"
homepage.workspace = true
repository.workspace = true
license.workspace = true
# Internal FFI shim — never published to crates.io. Only `tdbe` and
# `thetadatadx` are published (see publish-crate job in ci.yml).
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Expose a pair of `extern "C"` symbols (`tdx_test_panic_str` and
# `tdx_test_panic_string`) that deliberately panic inside the
# `ffi_boundary!` wrapper. Used only by the integration test at
# `tests/panic_boundary.rs` to verify that panics crossing the FFI
# boundary are caught, that the default return value is emitted, and
# that `tdx_last_error()` surfaces the panic payload. Off by default so
# the shared library shipped to SDK consumers never carries a
# "panic-on-demand" symbol.
testing-panic-boundary = []

[dependencies]
thetadatadx = { path = "../crates/thetadatadx", features = ["arrow"] }
tdbe = { version = "0.13.1", path = "../crates/tdbe" }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
arrow-array = "58.1.0"
arrow-ipc = "58.1.0"
arrow-schema = "58.1.0"
# Used by the FPSS streaming callback silent-drop observability path
# (see `tdx_fpss_dropped_events` / `tdx_unified_dropped_events`). Keep
# pinned to the same major/minor as the parent crate so the target that
# `tracing::debug!` writes to is filterable with a single
# `RUST_LOG=thetadatadx=debug` directive.
tracing = "0.1.44"

[dev-dependencies]
# Used by the FFI streaming unit test that exercises the Disruptor
# consumer thread directly (`ffi_callback_queued_runs_on_consumer_thread`).
# Pinned to the same version the core crate consumes through
# `crates/thetadatadx/Cargo.toml`.
disruptor = "4.2.0"
