[package]
name = "thetadatadx-ffi"
version = "13.0.0-rc.10"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "C FFI layer for thetadatadx — the C ABI consumed by the C++ SDK"
homepage.workspace = true
repository.workspace = true
license.workspace = true
# Internal FFI shim — never published to crates.io. Only `thetadatadx`
# is published (see publish-crate job in ci.yml).
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Expose a pair of `extern "C"` symbols (`thetadatadx_test_panic_str` and
# `thetadatadx_test_panic_string`) that deliberately panic inside the
# `ffi_boundary!` wrapper. Used only by the integration test at
# `tests/panic_boundary.rs` to verify that panics crossing the FFI
# boundary are caught, that the default return value is emitted, and
# that `thetadatadx_last_error()` surfaces the panic payload. Off by default so
# the shared library shipped to SDK consumers never carries a
# "panic-on-demand" symbol.
testing-panic-boundary = []

[dependencies]
thetadatadx = { path = "../thetadatadx-rs", features = ["arrow", "__internal"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
arrow-ipc = "59.0.0"
# RecordBatch / Schema types for the streaming `RecordBatch` reader's Arrow
# IPC boundary. Pinned to the same major as `arrow-ipc` and the parent crate.
arrow-array = "59.0.0"
arrow-schema = "59.0.0"
# Used by the FPSS streaming callback silent-drop observability path
# (see `thetadatadx_streaming_dropped_events` / `thetadatadx_client_dropped_events`). Keep
# pinned to the same major/minor as the parent crate so the target that
# `tracing::debug!` writes to is filterable with a single
# `RUST_LOG=thetadatadx=debug` directive.
tracing = "0.1.44"

[dev-dependencies]
# Used by the FFI streaming unit test that exercises the event ring
# consumer thread directly (`ffi_callback_queued_runs_on_consumer_thread`).
# Pinned to the same version the core crate consumes through
# `thetadatadx-rs/Cargo.toml`.
disruptor = "4.2.0" # VOCAB-OK: actual dep crate name
# Enables `StreamingClient::for_self_join_test` and `HarnessPublishMode` so
# the panic-isolation unit test in `src/streaming.rs` can drive the ring
# consumer directly without a live FPSS connection.
thetadatadx = { path = "../thetadatadx-rs", features = ["arrow", "__internal", "__test-helpers"] }
