[package]
name = "thetadatadx-py"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Python bindings for thetadatadx ﻗ native ThetaData SDK powered by Rust"
license = "Apache-2.0"
homepage = "https://github.com/userFRM/ThetaDataDx"
repository = "https://github.com/userFRM/ThetaDataDx"
documentation = "https://userfrm.github.io/ThetaDataDx/reference/"
readme = "README.md"
# PyPI package only; never publish this PyO3 shim to crates.io.
publish = false

[workspace]

[lib]
name = "thetadatadx"
crate-type = ["cdylib"]
doc = false

[dependencies]
# The native ThetaData implementation we're wrapping in Python bindings.
thetadatadx = { package = "thetadatadx-rs", path = "../thetadatadx-rs", features = ["arrow", "__internal"] }

# Direct prost dep for decoding `ResponseData` bytes in the
# `decode_response_bytes` hook. Pinned to the same version the engine
# crate consumes so the wire types resolve to a single instantiation.
prost = "=0.14.4"

# PyO3 bindings. We target the stable ABI so one wheel per platform supports
# every Python version from 3.12 upward.
pyo3 = { version = "=0.29.0", features = ["abi3-py312", "multiple-pymethods"] }

# Bridge between pyo3 and tokio so generated `*_async` methods return real
# awaitables backed by the shared runtime singleton (no second runtime is
# spun up per call). Pin to the matching release for pyo3 0.29.
pyo3-async-runtimes = { version = "=0.29.0", features = ["tokio-runtime"] }

# LMAX Disruptor ﻗ the same single-producer/single-consumer ring the engine
# crate drives for FPSS streaming. Used only by the offline streaming-saturation
# bench hook (`bench_streaming.rs::__bench_flood_events`), which drives the real
# pipeline + the production per-event GIL/marshal/callback path so the Python
# streaming ceiling is measured against the live ring configuration. Already in
# the dependency tree transitively via `thetadatadx`; named directly so the
# bench hook can build the producer. Matches the engine crate's `disruptor` line.
disruptor = "4.2.0"

# Apache Arrow columnar pipeline for the DataFrame adapter. We enable the
# `ffi` feature (the Arrow C Data / Stream Interface) rather than the
# `pyarrow` feature, and drive the pyarrow handoff ourselves in
# `record_batch_to_pyarrow_table`:
#   1. The `pyarrow` feature pulls `arrow-pyarrow`, which carries its own
#      pinned `pyo3` dependency. Exporting through the version-neutral C
#      Stream Interface instead keeps this crate's `pyo3` line independent
#      of arrow's bundled pin, so the two upgrade on separate cadences.
#   2. Single feature, fewer surfaces to audit. `arrow::array::*`,
#      `arrow::datatypes::*`, `arrow::record_batch::{RecordBatch,
#      RecordBatchIterator}`, and `arrow::ffi_stream::FFI_ArrowArrayStream`
#      are all we need.
#   3. Zero-copy to pyarrow: the batch is handed over as an
#      `FFI_ArrowArrayStream` pointer and imported via
#      `pyarrow.RecordBatchReader._import_from_c`, which aliases the
#      underlying buffers in place.
arrow = { version = "59.0.0", features = ["ffi"] }

# Async bridge: run tokio futures from sync Python
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }

# Error derivation for the 365-day auto-chunk date-math module. Matches
# the workspace crate's pin so we never drift on the trait surface.
thiserror = "2.0.18"

# Structured diagnostics for generator-emitted streaming helpers. Trace-level
# emission only ﻗ shutdown-time `tx.send` failures (Python rx dropped before
# tx side) are normal and must not spam default logs.
tracing = "0.1.44"

# `tracing_subscriber::Layer` trait + registry for the Python-logging
# bridge (see `logging_bridge.rs`). The `registry` feature pulls in
# `tracing_subscriber::registry::LookupSpan` which the `Layer` impl
# requires. No `fmt` subscriber ﻗ we forward to Python's stdlib
# logging, not to stderr.
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["registry"] }

# POSIX pipe + read for the asyncio-native `streaming_async()` surface.
# The pyclass allocates a self-pipe in `__aenter__`, hands the write-end
# to the Rust core via `connect_iter_with_wake_keep_handle`, and registers
# the read-end on the asyncio event loop with `loop.add_reader`. Bounded
# to Unix targets ﻗ Windows asyncio uses ProactorEventLoop which does
# not support `add_reader` on pipes; the pyclass raises at construction
# time on non-Unix.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Re-declare the engine dep with `__test-helpers` so Rust unit tests can reach
# the in-process FPSS harness (`StreamingClient::for_self_join_test`,
# `HarnessPublishMode`) ﻗ gated out of the non-test build. Mirrors
# `thetadatadx-ffi/Cargo.toml`. Same `arrow` / `__internal` feature set as the runtime dep.
[dev-dependencies]
thetadatadx = { package = "thetadatadx-rs", path = "../thetadatadx-rs", features = ["arrow", "__internal", "__test-helpers"] }

# Match the main workspace's strict bar. This crate is `[workspace.exclude]`d
# in the root `Cargo.toml` (it has its own toolchain / feature footprint), so
# it can't inherit via `[lints] workspace = true` ﻗ mirror the rules locally.
[lints.rust]
warnings = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
# PyO3 `#[pymethods]` become flat free-function signatures, one param per
# optional kwarg. Generated endpoints expose every query parameter from
# `endpoint_surface.toml` as a separate `Option<T>` arg, routinely hitting
# 10-27 params. The "too many arguments" heuristic is a style lint built
# for hand-written Rust APIs; it doesn't apply to generator-emitted binding
# crates where the argument list is the language's public contract.
too_many_arguments = "allow"
