[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "thetadatadx"
dynamic = ["version"]
description = "No-JVM ThetaData Terminal — native Rust SDK for direct market data access (Python bindings)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "userFRM" }]
keywords = ["thetadata", "market-data", "options", "streaming", "grpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/userFRM/ThetaDataDx"
Repository = "https://github.com/userFRM/ThetaDataDx"
Documentation = "https://userfrm.github.io/ThetaDataDx/reference/"
Discord = "https://discord.thetadata.us/"

[tool.maturin]
# Mixed Rust + Python layout: hand-written `.pyi` stubs and the
# `py.typed` PEP 561 marker live in `python/thetadatadx/`. Maturin
# merges these into the wheel alongside the compiled `.so` extension
# emitted from `src/lib.rs`.
python-source = "python"
# Stable ABI: one wheel per platform covers every CPython 3.12+ release.
#
# The `abi3-py312` feature is unconditionally enabled here even on
# the free-threaded `3.14t` build matrix entry — PyO3 emits a benign
# warning at build time for that entry
# ("free-threaded build ignores abi3"), but the wheel selection is
# correct either way: maturin's
# `--interpreter python3.14t` flag overrides the abi3 emission and
# tags the wheel `cp314-cp314t-*` (PEP 703 free-threaded ABI, not
# abi3). The abi3 feature is then a no-op on that build. Documented
# as intended; flipping it on / off per matrix entry would require a
# maturin overlay file that maintains two source-of-truth feature
# lists. See the GH Actions log for the documented warning shape.
#
# The free-threaded floor is CPython 3.14: PyO3 does not support the
# free-threaded build of CPython below 3.14, so no 3.13t nogil wheel
# is produced.
features = ["pyo3/abi3-py312"]

[project.optional-dependencies]
# Arrow columnar pipeline (feat/arrow-columnar-dataframe):
#   - `.to_arrow()` on a typed `<Tick>List` wrapper returns a
#     `pyarrow.Table` zero-copy from Rust via the Arrow C Data
#     Interface. Requires `pyarrow>=14.0` so the C-Data bindings
#     match the `arrow-rs` 59 on the Rust side.
#   - `.to_pandas()` calls `pyarrow.Table.to_pandas()` under the hood,
#     which is zero-copy for numeric columns on pandas 2.x
#     (numpy-backed arrays alias the underlying Arrow buffers).
#     pandas <2.0 works but forces a full copy per column.
#   - `.to_polars()` calls `polars.from_arrow()`. polars 0.20+
#     consumes Arrow buffers directly.
arrow = ["pyarrow>=14.0"]
pandas = ["pandas>=2.1", "pyarrow>=14.0"]
polars = ["polars>=0.20", "pyarrow>=14.0"]
all = ["pandas>=2.1", "polars>=0.20", "pyarrow>=14.0"]
dev = ["pytest>=9", "pytest-timeout>=2.3"]

[tool.pytest.ini_options]
# Hard per-test wall-clock cap when pytest-timeout is installed. Live
# streaming tests enforce their own inner deadlines via `time.monotonic()`
# polling loops; this global cap is the safety net for a hung network call.
timeout = 30
